--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <div class="container-fluid" id="menu">
 
     </div>
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
