--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 
 <body>
+
+    <div class="sidenav">
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#clients">Clients</a>
+        <a href="#contact">Contact</a>
+    </div>
+
     <div class="container-fluid" id="top-image"></div>
     <div class="container-fluid" id="cover1"></div>
     <div class="container-fluid" id="space1"></div>
@@ -17,7 +25,11 @@
     <div class="container-fluid" id="cover4"></div>
 
     <div class="container-fluid" id="menu">
-
+        <div id="navbar">
+            <a href="#home">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+        </div>
     </div>
     <script src="js/jquery-3.5.1.js"></script>
     <script src="js/script.js"></script>
