--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container-fluid" id="cover4"></div>
 
     <div class="container-fluid" id="menu">
-        <div id="navbar">
+        <div class="container-fluid" id="navbar">
             <a href="#home">Home</a>
             <a href="#news">News</a>
             <a href="#contact">Contact</a>
