add navbar icons

--- a/index.html
+++ b/index.html
@@ -27,11 +27,27 @@
     <div class="container-fluid" id="menu">
         <!-- Control buttons -->
         <div class="container-fluid" id="navbar">
-            <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-            <button class="btn" onclick="filterSelection('cars')"> Cars</button>
+
+            <div class="flex-container">
+                <div id="icon">
+                    <img src="img/icons/cheese-bw.svg" alt="cheese">
+                    <span class="caption">Cheese</span>
+                </div>
+
+                <img src="img/icons/child-bw.svg" alt="cheese">
+                <img src="img/icons/hot-bw.svg" alt="cheese">
+                <img src="img/icons/meat-bw.svg" alt="cheese">
+                <img src="img/icons/mushroom-bw.svg" alt="cheese">
+                <img src="img/icons/olives-bw.svg" alt="cheese">
+                <img src="img/icons/onions-bw.svg" alt="cheese">
+                <img src="img/icons/veggie-bw.svg" alt="cheese">
+            </div>
+
+            <!--<button class="btn active" onclick="filterSelection('all')"> Show all</button>
+            <button class="btn" onclick="filterSelection('cars')"> </button>
             <button class="btn" onclick="filterSelection('animals')"> Animals</button>
             <button class="btn" onclick="filterSelection('fruits')"> Fruits</button>
-            <button class="btn" onclick="filterSelection('colors')"> Colors</button>
+            <button class="btn" onclick="filterSelection('colors')"> Colors</button>-->
         </div>
 
         <!-- The filterable elements. Note that some have multiple class names (this can be used if they belong to multiple categories) -->
