fix flex for navbar

--- a/index.html
+++ b/index.html
@@ -33,14 +33,34 @@
                     <img src="img/icons/cheese-bw.svg" alt="cheese">
                     <span class="caption">Cheese</span>
                 </div>
-
-                <img src="img/icons/child-bw.svg" alt="cheese">
-                <img src="img/icons/hot-bw.svg" alt="cheese">
-                <img src="img/icons/meat-bw.svg" alt="cheese">
-                <img src="img/icons/mushroom-bw.svg" alt="cheese">
-                <img src="img/icons/olives-bw.svg" alt="cheese">
-                <img src="img/icons/onions-bw.svg" alt="cheese">
-                <img src="img/icons/veggie-bw.svg" alt="cheese">
+                <div id="icon">
+                    <img src="img/icons/child-bw.svg" alt="For children">
+                    <span class="caption">Kids</span>
+                </div>
+                <div id="icon">
+                    <img src="img/icons/hot-bw.svg" alt="Hot">
+                    <span class="caption">Hot</span>
+                </div>
+                <div id="icon">
+                    <img src="img/icons/meat-bw.svg" alt="meat">
+                    <span class="caption">Meat</span>
+                </div>
+                <div id="icon">
+                    <img src="img/icons/mushroom-bw.svg" alt="no mushroom">
+                    <span class="caption">Without mushroom</span>
+                </div>
+                <div id="icon">
+                    <img src="img/icons/olives-bw.svg" alt="no olives">
+                    <span class="caption">Without olives</span>
+                </div>
+                <div id="icon">
+                    <img src="img/icons/onions-bw.svg" alt="no onions">
+                    <span class="caption">Without onions</span>
+                </div>
+                <div id="icon">
+                    <img src="img/icons/veggie-bw.svg" alt="veggie">
+                    <span class="caption">Veggie</span>
+                </div>
             </div>
 
             <!--<button class="btn active" onclick="filterSelection('all')"> Show all</button>
