make navbar buttons

--- a/index.html
+++ b/index.html
@@ -30,35 +30,35 @@
 
             <div class="flex-container">
                 <div id="icon">
-                    <img src="img/icons/cheese-bw.svg" alt="cheese">
+                    <button class="btn" onclick="filterSelection('cars')"><img src="img/icons/cheese-bw.svg" alt="cheese"></button>
                     <span class="caption">Cheese</span>
                 </div>
                 <div id="icon">
-                    <img src="img/icons/child-bw.svg" alt="For children">
+                    <button class="btn" onclick="filterSelection('animals')"><img src="img/icons/child-bw.svg" alt="For children"></button>
                     <span class="caption">Kids</span>
                 </div>
                 <div id="icon">
-                    <img src="img/icons/hot-bw.svg" alt="Hot">
+                    <button class="btn" onclick="filterSelection('colors')"><img src="img/icons/hot-bw.svg" alt="Hot"></button>
                     <span class="caption">Hot</span>
                 </div>
                 <div id="icon">
-                    <img src="img/icons/meat-bw.svg" alt="meat">
+                    <button class="btn" onclick="filterSelection('fruits')"><img src="img/icons/meat-bw.svg" alt="meat"></button>
                     <span class="caption">Meat</span>
                 </div>
                 <div id="icon">
-                    <img src="img/icons/mushroom-bw.svg" alt="no mushroom">
+                    <button class="btn" onclick="filterSelection('cars')"><img src="img/icons/mushroom-bw.svg" alt="no mushroom"></button>
                     <span class="caption">Without mushroom</span>
                 </div>
                 <div id="icon">
-                    <img src="img/icons/olives-bw.svg" alt="no olives">
+                    <button class="btn" onclick="filterSelection('cars')"><img src="img/icons/olives-bw.svg" alt="no olives"></button>
                     <span class="caption">Without olives</span>
                 </div>
                 <div id="icon">
-                    <img src="img/icons/onions-bw.svg" alt="no onions">
+                    <button class="btn" onclick="filterSelection('cars')"><img src="img/icons/onions-bw.svg" alt="no onions"></button>
                     <span class="caption">Without onions</span>
                 </div>
                 <div id="icon">
-                    <img src="img/icons/veggie-bw.svg" alt="veggie">
+                    <button class="btn" onclick="filterSelection('cars')"><img src="img/icons/veggie-bw.svg" alt="veggie"></button>
                     <span class="caption">Veggie</span>
                 </div>
             </div>
