--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
             <div class="flex-container">
                 <div id="icon">
-                    <button class="btn" onclick="filterSelection('all')"><span class="caption">Show All</span></button>
-
+                    <button class="btn" onclick="filterSelection('all')"><img id="all" src="img/icons/pizza.png" alt="cheese"></button>
+                    <span class="caption">Show All</span>
                 </div>
                 <div id="icon">
                     <button class="btn" onclick="filterSelection('cheese')"><img id="cheese" src="img/icons/cheese-color.svg" alt="cheese"></button>
