--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, duck fillet (sous vide) secret sauces from abroad, including hazelnut, leek, cucumber, cilantro</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv cheese meat no-olives" id="pizza">
+            <div class="jumbotron filterDiv cheese meat child no-olives" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-3.jpeg">
                 </div>
@@ -92,7 +92,7 @@
                     <p>Italian flour, parmesan and cream sauce, mozzarella, dorblu, baked chicken, mushrooms, Bulgarian pepper, oregano</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv meat hot" id="pizza">
+            <div class="jumbotron filterDiv meat no-onion no-olives" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-4.jpeg">
                 </div>
@@ -101,7 +101,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, dorblu, dry-cured bacon, hot pepper, oregano</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv meat" id="pizza">
+            <div class="jumbotron filterDiv meat no-onion no-olives" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-5.jpeg">
                 </div>
@@ -110,7 +110,7 @@
                     <p>Italian flour, truffle sauce, mozzarella, duck fillet (sous vide), figs, brie, almonds, pomegranate sauce</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv child" id="pizza">
+            <div class="jumbotron filterDiv child no-onion no-olives" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-6.jpeg">
                 </div>
@@ -119,7 +119,7 @@
                     <p>Italian flour, mozzarella, whole tomato sauce, premium salami, oregano</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv hot" id="pizza">
+            <div class="jumbotron filterDiv meat hot" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-9.png">
                 </div>
@@ -128,7 +128,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, pepperoni, hunting sausages, bell pepper, olives, Pesto sauce, oregano</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv cheese" id="pizza">
+            <div class="jumbotron filterDiv cheese veggie child no-olives" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-8.jpeg">
                 </div>
@@ -137,7 +137,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, tomatoes, pesto sauce, oregano</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv meat" id="pizza">
+            <div class="jumbotron filterDiv meat hot no-olives" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-7.jpeg">
                 </div>
@@ -146,7 +146,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, beef, boiled pork, pepperoni, hunting sausages, Bulgarian pepper, Crimean onion, barbecue sauce, oregano</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv cheese" id="pizza">
+            <div class="jumbotron filterDiv cheese no-onion no-olives" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-10.jpeg">
                 </div>
@@ -155,7 +155,7 @@
                     <p>Italian flour, creamy sauce according to someone's grandmother's secret recipe, mozzarella, goat cheese, root vegetables, pine nuts</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv veggie" id="pizza">
+            <div class="jumbotron filterDiv meat no-onion no-olives" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-11.jpeg">
                 </div>
@@ -164,7 +164,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, PROSCUITTO, rucolla, cherry tomatoes, sun-dried tomato, capers, oregano, parmesan</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv meat " id="pizza">
+            <div class="jumbotron filterDiv meat child no-olives" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-12.jpeg">
                 </div>
@@ -173,7 +173,7 @@
                     <p>Italian flour, mozzarella, cream sauce, turkey, orange, almonds, mixed greens / arugula, cranberries, orange mustard</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv cheese" id="pizza">
+            <div class="jumbotron filterDiv cheese veggie no-olives" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-13.jpeg">
                 </div>
@@ -182,7 +182,7 @@
                     <p>Italian flour, truffle sauce, mozzarella, porcini mushrooms, chanterelles, champignons, sweet onions, green onions</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv veggie hot" id="pizza">
+            <div class="jumbotron filterDiv meat hot no-olives" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-14.jpeg">
                 </div>
@@ -191,7 +191,7 @@
                     <p>Italian flour, Mozzarella, whole tomato sauce, real Italian pepperoni, hot peppers, capers, oregano</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv" id="pizza">
+            <div class="jumbotron filterDiv meat no-onion" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-15.jpeg">
                 </div>
@@ -200,7 +200,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, bacon, tomatoes, mushrooms, olives</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv cheese" id="pizza">
+            <div class="jumbotron filterDiv cheese veggie no-onion no-olives" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-16.jpeg">
                 </div>
@@ -209,7 +209,7 @@
                     <p>Italian flour, cream and parmesan sauce, mozzarella, DorBlue, parmesan, walnut, cranberry</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv cheese" id="pizza">
+            <div class="jumbotron filterDiv meat cheese no-olives" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-17.jpeg">
                 </div>
@@ -218,7 +218,7 @@
                     <p>Italian flour, whole tomato sauce, mozzarella, lamb, baked eggplant, tomato salsa, sweet onion, basil, secret sauce</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv cheese meat" id="pizza">
+            <div class="jumbotron filterDiv cheese meat no-olives" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-18.jpeg">
                 </div>
@@ -227,7 +227,7 @@
                     <p>Italian flour, truffle sauce, mozzarella, roast beef, porcini mushrooms, tomatoes, green onions</p>
                 </div>
             </div>
-            <div class="jumbotron filterDiv hot" id="pizza">
+            <div class="jumbotron filterDiv meat child no-onion no-olives" id="pizza">
                 <div class="circle">
                     <img src="img/pizza/pizza-1.jpeg">
                 </div>
